Commander Genius Pre-Release v0.3 (CloneKeenPlus):
--------------------------------------------------
05-08-2009
- fixed crash when game in EP1 or 2 was ending
- fixed fonts problems in story section.

04-08-2009
- Fixed some minor issues with mods [Sprite Replacement] (Tulip)
- Added Ordering Info to Episode 1. Only works there!
- Episode 1 is now bundled with the interpreter

02-08-2009
- Updated the PC-Speaker Sound emulation (Thx to Napalm for a great lesson!)

01-08-2009
- Masked tile can now use semi-transparent pixels. Silcar 3 ghosts use that (Tulip)
- Implemented a new dialog system. Base for the future dialogs and menus
- Minor issues

26-07-2009
- fixed some bugs which made the game crash
- removed an old and obsolete class
- The need of ep?attr.dat has been lifted and future versions won't bring that file anymore!

25-07-2009
Changes by Albert:
- Implementation of Searchpath
- Crash fixes
- Improved memory managment of strings. No more chars
- HTML code is printed to the console

Changes by Gerstrong:
- changed pogo physics a bit (Ceilick)
- improved Patch Class for mods
- changed physics of Vorticon Elite. Also has a new filenames (Tulip)
- reduced some flags in some functions which are obsolete
- implemented reset controls (Iv4n)

18-07-2009
- Dynamic loading of the EXE-File and special class for its manipulation. 
  (including UNLZEXE and version retrieval)
  This also improves the memory management in Story and Sounds extraction
- Added basic support of pat-files. Only %patchfile entries are detected for now.

17-07-2009
- Tiles are now loaded once when the game starts, instead in every level
- Implemented a class which is able to read strings out of exe-files
  of the game. Sorry, but It still doesn't work and is disabled.
  So no effects for now.
- For Windows users: The Package should be much smaller now.

16-07-2009
- Improved Mod Support in reading tiles and bitmaps (Tulip)
- Improved intro screen. More accurate to the original game now.
